# boto3-s3-access-grants-plugin

./: CHANGELOG.md  CONTRIBUTING.md  README.md  THIRD_PARTY_LICENSES  pyproject.toml
aws_s3_access_grants_boto3_plugin/: operation_permissions.py  s3_access_grants_plugin.py
aws_s3_access_grants_boto3_plugin/cache/: access_grants_cache.py  account_id_resolver_cache.py  bucket_region_resolver_cache.py  cache_key.py
aws_s3_access_grants_boto_plugin/: operation_permissions.py  s3_access_grants_plugin.py
aws_s3_access_grants_boto_plugin/cache/: access_grants_cache.py  account_id_resolver_cache.py  cache_key.py
boto3-s3-access-grants-plugin/: exceptions.py  operation_permissions.py  s3_access_grants_plugin.py
boto3-s3-access-grants-plugin/cache/: AccountIdResolverCache.py  CacheKey.py  access_denied_cache.py  access_grants_cache.py  account_id_resolver_cache.py  cache_key.py
boto3_s3_access_grants_plugin/: operation_permissions.py  s3_access_grants_plugin.py
boto3_s3_access_grants_plugin/cache/: access_denied_cache.py  access_grants_cache.py  account_id_resolver_cache.py  bucket_region_resolver_cache.py  cache_key.py
tests/integration/: test_plugin.py  test_setup.py
tests/unit/: test_operation_permissions.py  test_s3_access_grants_plugin.py
tests/unit/cache/: test_AccountIdResolverCache.py  test_CacheKey.py  test_access_denied_cache.py  test_access_grants_cache.py  test_account_id_resolver_cache.py  test_bucket_region_resolver_cache.py  test_cache_key.py
